--- a/src/app/pages/media-search/media-search.component.html
+++ b/src/app/pages/media-search/media-search.component.html
@@ -1,25 +1,37 @@
 <section class="media-search">
   <div class="container">
     <header  class="media-search__header">
-      <h2 class="media-search__title">Results for: {{ searchQuery }}</h2>
+      <h2 class="media-search__title">
+        Results for:
+        <span class="media-search__value">{{ searchQuery }}</span>
+      </h2>
     </header>
     @if (loading) {
       <mat-spinner [diameter]="100" class="loader"></mat-spinner>
     } @else {
-      <mat-tab-group animationuration="300ms" mat-stretch-tabs="false" mat-align-tabs="center" [selectedIndex]="selectedMediaTypeIndex">
+      <mat-tab-group animationDuration="250ms" mat-stretch-tabs="false" mat-align-tabs="center" [selectedIndex]="selectedMediaTypeIndex" dynamicHeight [selectedIndex]="selectedTab.value"
+      (selectedIndexChange)="selectedTab.setValue($event)">
         <mat-tab [label]="movieTabLabel">
-          @for (media of movies; track media.id) {
-            <a [routerLink]="[ '/' + 'movie', media.id]" class="card-link">
-              <p>{{ media.title }}</p>
-            </a>
-          }
+          <app-virtual-list>
+            @for (media of movies; track media.id) {
+              <app-virtual-list-item>
+                <a [routerLink]="[ '/' + 'movie', media.id]" class="card-link">
+                  <app-media-card [data]="media.getMediaCardData()" [size]="'small'"></app-media-card>
+                </a>
+              </app-virtual-list-item>
+            }
+          </app-virtual-list>
         </mat-tab>
         <mat-tab [label]="tvTabLabel">
-          @for (media of tvseries; track media.id) {
-            <a [routerLink]="[ '/' + 'tv', media.id]" class="card-link">
-              <p>{{ media.name}}</p>
-            </a>
-          }
+          <app-virtual-list>
+            @for (media of tvseries; track media.id) {
+              <app-virtual-list-item>
+                <a [routerLink]="[ '/' + 'tv', media.id]" class="card-link">
+                  <app-media-card [data]="media.getMediaCardData()" size="small"></app-media-card>
+                </a>
+              </app-virtual-list-item>
+            }
+          </app-virtual-list>
         </mat-tab>
       </mat-tab-group>
     }
