--- a/src/app/modules/media-virtual-grid/components/virtual-list/virtual-list.component.scss
+++ b/src/app/modules/media-virtual-grid/components/virtual-list/virtual-list.component.scss
@@ -4,4 +4,10 @@
   gap: 1rem;
   list-style: none;
   justify-content: center;
+  padding: 0;
+}
+
+.virtual-list-container {
+  height: 100%;
+  overflow-y: auto;
 }
