ADD person credits, FIX scroll carousel, close function search toolbar

--- a/src/app/pages/person-details/person-details.component.html
+++ b/src/app/pages/person-details/person-details.component.html
@@ -5,4 +5,7 @@
   } @else if (!loadingInfo && personInfo !== undefined) {
     <app-person-info [data]="personInfo"></app-person-info>
   }
+  <section class="container">
+    <app-credits-gallery></app-credits-gallery>
+  </section>
 </section>
