ADD personCredits endpoints, discoverMedia page: movie and tv main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,13 @@
         <mat-icon>close</mat-icon>
       </button>
     </div>
+    <ul class="main-menu">
+      @for (page of pages; track page.name) {
+        <li class="main-menu__item">
+          <a [href]="page.link" class="main-menu__link">{{ page.name }}</a>
+        </li>
+      }
+    </ul>
   </mat-drawer>
 
   <mat-drawer-content class="app-content" [class.overflow-scroll]="searchRoute">
