--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,3 +46,34 @@
 .overflow-scroll {
   overflow-y: scroll;
 }
+
+.main-menu {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  &__link {
+    display: block;
+    text-decoration: none;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 1rem;
+    color: #fff;
+    box-sizing: border-box;
+    transition: background-color .2s;
+    font-size: 1.2rem;
+    &--active {
+      background-color: transparent !important;
+      background-image: var(--primary-gradient);
+    }
+    &--center {
+      text-align: center;
+      .list__link {
+        justify-content: center;
+      }
+    }
+    &:hover {
+      background-color: var(--primary-color);
+    }
+  }
+}
