--- a/src/app/components/media-card/media-card.component.scss
+++ b/src/app/components/media-card/media-card.component.scss
@@ -6,6 +6,7 @@
   padding: .4rem;
   transition: backgrouPnd-color 0.2s;
   box-shadow: none;
+  animation: fadeIn 300ms;
   &__title {
     font-size: 1rem;
     height: 100%;
