--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
   text-decoration: none;
   color: inherit;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
