ADD link to movies with genre queryParm, ADD initial config to translations

--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -15,7 +15,7 @@
       </mat-form-field>
       <button matRipple type="button" class="search-button" (click)="searchBarToggle.emit()" #searchButton>
         <mat-icon color="primary">search</mat-icon>
-        <span class="search-button__label">SEARCH</span>
+        <span class="search-button__label" i18n="Search button text@@btnSearchTxt">SEARCH</span>
       </button>
     </div>
   </mat-toolbar-row>
