--- a/src/app/pages/media-details/media-info/media-info.component.scss
+++ b/src/app/pages/media-details/media-info/media-info.component.scss
@@ -93,6 +93,8 @@
         text-decoration: none;
         background-color: transparent;
         background-image: var(--primary-gradient);
+        border: none;
+        cursor: pointer;
       }
     }
   }
