ADD translations, es-EC, en-US

--- a/src/app/components/media-type-chip/media-type-chip.component.html
+++ b/src/app/components/media-type-chip/media-type-chip.component.html
@@ -1,3 +1,3 @@
 <span class="chip" [class]="bgColorClass()">
-  {{ mediaType | uppercase }}
+  {{ mediaTypeLabels[mediaType] | uppercase }}
 </span>
