--- a/src/app/modules/media-carousel/components/carousel-header/carousel-header.component.scss
+++ b/src/app/modules/media-carousel/components/carousel-header/carousel-header.component.scss
@@ -21,5 +21,6 @@
     text-decoration: none;
     color: var(--text-color);
     background-color: var(--primary-color);
+    text-transform: uppercase;
   }
 }
