--- a/src/app/pages/trending/trending.component.html
+++ b/src/app/pages/trending/trending.component.html
@@ -1,6 +1,6 @@
 <section class="container">
   <header class="header">
-    <h1 class="tile">
+    <h1 class="tile" i18n="@@trendingCarouselTitle">
       Trending
     </h1>
     <div id="filters">
