UPDATE not found page

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,8 @@
-<p>not-found works!</p>
+<section class="not-found">
+  <div class="copy">
+    <h1 class="title" i18n="@@notFoundTitle">Something's wrong here...</h1>
+    <p class="message" i18n="@@notFoundCopy">We can't find the page you're looking for.</p>
+    <a href="/" class="link" i18n="@@notFoundLink">Back to home</a>
+  </div>
+  <mat-icon color="warn" class="icon">question_mark</mat-icon>
+</section>
